reminder db finished - analyze fragment complete started reminder fragment